WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207908
Regression(
r246188
) WebProcess is launched too eagerly when [WKWebView _restoreSessionState] is called
https://bugs.webkit.org/show_bug.cgi?id=207908
Summary
Regression(r246188) WebProcess is launched too eagerly when [WKWebView _resto...
Chris Dumez
Reported
2020-02-18 13:17:32 PST
Since
r246188
, the WebProcess is launched eagerly when [WKWebView _restoreSessionState] is called. This is bad for performance because we are unable to leverage the process cache at this point (since we don't know which domain will be loaded).
Attachments
Patch
(7.21 KB, patch)
2020-02-18 13:24 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.17 KB, patch)
2020-02-19 12:10 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.24 KB, patch)
2020-03-30 09:27 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-02-18 13:24:27 PST
Created
attachment 391082
[details]
Patch
Geoffrey Garen
Comment 2
2020-02-18 22:02:13 PST
Comment on
attachment 391082
[details]
Patch Seems like the api test failure is real.
Chris Dumez
Comment 3
2020-02-19 12:08:17 PST
Comment on
attachment 391082
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391082&action=review
> Source/WebKit/UIProcess/WebPageProxy.cpp:-3404 > - m_backForwardList->restoreFromState(WTFMove(sessionState.backForwardListState));
lol, I dropped this line by mistake :o)
Chris Dumez
Comment 4
2020-02-19 12:10:44 PST
Created
attachment 391189
[details]
Patch
WebKit Commit Bot
Comment 5
2020-02-19 22:25:48 PST
Comment on
attachment 391189
[details]
Patch Clearing flags on attachment: 391189 Committed
r257045
: <
https://trac.webkit.org/changeset/257045
>
WebKit Commit Bot
Comment 6
2020-02-19 22:25:50 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2020-02-19 22:26:13 PST
<
rdar://problem/59619323
>
WebKit Commit Bot
Comment 8
2020-02-20 12:01:29 PST
Re-opened since this is blocked by
bug 208024
Chris Dumez
Comment 9
2020-03-30 09:27:55 PDT
Created
attachment 394926
[details]
Patch
EWS
Comment 10
2020-03-30 10:35:14 PDT
Committed
r259209
: <
https://trac.webkit.org/changeset/259209
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394926
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug